--- a/scp-002.html
+++ b/scp-002.html
@@ -2,7 +2,7 @@
   <head>
     <title>SCP-002 - SCP Foundation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="stylesheet" type="text/css" href="https://https://github.com/ChurBozo/5210_Assessment_1_SCP/style.css">
   </head>
 
   <body>
